# autocompleter

./: .gitignore  README.md  pyproject.toml
src/autocompleter/: __init__.py  autocomplete.py
tests/: __init__.py
