[tool.poetry]
name = "autocompleter"
version = "0.3.0"
description = ""
authors = ["Shneor <770elmo@gmail.com>"]
readme = "README.md"
packages = [{include = "autocompleter", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9"

[tool.poetry.group.dev.dependencies]
ipython = "^8.14.0"
pytest = "^7.4.0"
coverage = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
